Invalidate whole box having clip-path on resize

The clip-path may depend on the box size, for which incremental
invalidation is not applicable.

Bug: 759440
Cq-Include-Trybots: master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: Ie16f5a03c4ca9186111c4729ca4ae106425e8486
Reviewed-on: https://chromium-review.googlesource.com/713399
Reviewed-by: Philip Rogers <pdr@chromium.org>
Commit-Queue: Xianzhu Wang <wangxianzhu@chromium.org>
Cr-Commit-Position: refs/heads/master@{#509184}
Former-commit-id: b74f734b985b115fb11ad51bf406980bbfb866ac